Fix font sizing on testimonials header on small screens

--- a/source/stylesheets/modules/_section-header.scss
+++ b/source/stylesheets/modules/_section-header.scss
@@ -14,7 +14,10 @@
   }
   h2 {
     color: $primary-color;
-    font-size: calc-em(60px);
+    font-size: calc-em(38px);
+    @include respond-to(480px) {
+      font-size: calc-em(60px);
+    }
   }
   h3 {
     font-size: calc-em(18px);
